Fixed alignment in scroll to top button

--- a/components/ScrollToTopButton/ScrollToTopButton.module.scss
+++ b/components/ScrollToTopButton/ScrollToTopButton.module.scss
@@ -30,5 +30,4 @@
     width: $spacing-3;
     height: $spacing-3;
     transform: rotate(180deg);
-    margin-top: $spacing-1;
 }
